test/conformance/chainsaw/reports/background/multiple-exceptions-with-pod-security/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psp-baseline
spec:
  failurePolicy: Ignore
  background: true
  validationFailureAction: Enforce
  rules:
  - name: baseline
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      podSecurity:
        level: baseline
        version: v1.29
