test/conformance/chainsaw/reports/background/multiple-exceptions-with-pod-security/report-fail-assert.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  ownerReferences:
  - apiVersion: v1
    kind: Pod
    name: test-pod
results:
- message: 'Validation rule ''baseline'' failed. It violates PodSecurity "baseline:v1.29":
    (Forbidden reason: non-default capabilities, field error list: [spec.initContainers[0].securityContext.capabilities.add
    is forbidden, forbidden values found: [NET_ADMIN NET_RAW]])'
  policy: psp-baseline
  properties:
    controls: capabilities_baseline
    controlsJSON: '[{"ID":"capabilities_baseline","Name":"Capabilities","Images":["alpine:latest","busybox:latest"]}]'
    standard: baseline
    version: v1.29
  result: fail
  rule: baseline
  scored: true
  source: kyverno
scope:
  apiVersion: v1
  kind: Pod
  name: test-pod
summary:
  error: 0
  fail: 1
  pass: 0
  skip: 0
  warn: 0
