test/conformance/chainsaw/reports/background/multiple-exceptions-with-pod-security/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: multiple-exceptions-with-pod-security
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: pod.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: psp-baseline
  - name: step-03
    try:
    - apply:
        file: exceptions.yaml
  - name: step-04
    try:
    - sleep:
        duration: 5s
  - name: step-05
    try:
    - assert:
        file: report-skip-assert.yaml
  - name: step-06
    try:
    - script:
        env:
        - name: NAMESPACE
          value: ($namespace)
        content: |
          kubectl delete polex init1-exception-baseline -n $NAMESPACE
  - name: step-07
    try:
    - sleep:
        duration: 5s
  - name: step-08
    try:
    - assert:
        file: report-fail-assert.yaml
